# steam-bridge

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml  release.yml
crates/native/: Cargo.toml  build.rs
crates/native/src/: compat.rs  lib.rs  macos_metal_surface.mm  native_surface.rs  state.rs  steam_game_coordinator_bridge.cpp  steam_header_only_bridge.cpp  steam_music_remote_bridge.cpp  windows_d3d11.rs
docs/: steam-api-coverage.md
docs/research/: cross-platform-overlay-status.md  current-work.md  electron-steam-overlay-architecture.md  macos-overlay-notes.md  native-overlay-presenter-plan.md  test-findings-ledger.md  windows-actual-game-exhaustive-qa.md
examples/electron-basic/: README.md  checkout-proof.cjs  index.html  main.js  native-binding-probe.cjs  package.json  preload.js  smoke-error.cjs  smoke-sanitize.cjs
examples/electron-fov4/: index.html  main.js  package.json
fixtures/windows-electron-builder-asar/: electron-builder.config.cjs  main.cjs
scripts/: assemble-release-artifacts.cjs  assert-apple-silicon-target.cjs  assert-electron-smoke-version.cjs  assert-supported-targets.cjs  audit-steam-api-coverage.cjs  build-native.cjs  check-native.cjs  configure-npm-publish-proof.cjs  detect-macos-steam-overlay-ipc.cjs  generate-steamworks-enums.cjs  kwin-active-window-probe.js  linux-electron-smoke.sh  macos-electron-smoke.sh  macos-overlay-matrix.sh  macos-steam-env-launcher.c  native-binding-manifest.cjs  package-electron-example.cjs  publish-release-candidate.cjs  sign-windows-package.ps1  smoke-package.cjs  steam-deck-overlay-matrix.sh  steam-deck-smoke.sh  summarize-macos-overlay-matrix.cjs  summarize-steam-deck-overlay-matrix.cjs  summarize-windows-overlay-matrix.cjs  upsert-steam-app-launch-options.cjs  upsert-steam-shortcut.cjs  verify-electron-smoke-result.cjs  verify-macos-steam-signing.cjs  verify-release-artifacts.cjs  verify-windows-packaged-artifacts.cjs  windows-app-control-dev-mode.ps1  windows-deploy-release-candidate.ps1  windows-electron-builder-asar-gate.cjs  windows-electron-smoke.ps1  windows-external-foreground-coordinator.ps1  windows-foreground-grant-broker.ps1  windows-live-proof-receipt.cjs  windows-native-overlay-control.ps1  windows-overlay-matrix.ps1  (+5 more)
scripts/windows-foreground-grant-broker/: SteamBridgeForegroundGrantBroker.cs
scripts/windows-native-overlay-control/: SteamBridgeNativeOverlayControl.cs
tests/: steam-bridge.test.cjs
