[package]
name = "steam-bridge-native"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.8", features = ["tokio_rt", "napi6", "serde-json"] }
napi-derive = "2.16.9"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steamworks-sys = "0.13.0"
tokio = { version = "1", features = ["sync", "time"] }

[build-dependencies]
napi-build = "2"
