[package]
name = "steam-bridge-native"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
napi = { version = "3.9.4", features = ["tokio_rt", "napi6", "serde-json"] }
napi-derive = "3.5.7"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steamworks-sys = "0.13.0"
tokio = { version = "1", features = ["sync", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
gl = "0.14"
x11-dl = "2.21"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_System_Threading"
] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_OpenGL",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_Controls",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }

[build-dependencies]
cc = "1.0"
napi-build = "2"
